syntax = "proto3";

import "rpc/proto/rpc.proto";

option go_package = "sigmaos/chunksrv/proto";

message FetchChunkRequest {
   string prog = 1;
   int32 chunkId = 2;
   uint64 size = 3;
   string realm = 4;
}

message FetchChunkResponse {
  Blob blob = 1;
  uint64 size = 2;
}
